# django-sql-dashboard

./: pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
django_sql_dashboard/: __init__.py  models.py  urls.py  utils.py  views.py
django_sql_dashboard/templates/django_sql_dashboard/widgets/: default.html
test_project/: test_export.py  test_parameters.py  test_widgets.py
test_project/config/: settings.py  settings_interactive.py
